--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^17.0.21",
     "@types/nprogress": "^0.2.0",
+    "@types/numeral": "^2.0.2",
     "@types/react": "^17.0.40",
     "@types/react-lazy-load-image-component": "^1.5.2",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
